# client

./: .buildid  .gitignore  .project  CMakeLists.txt  Doxyfile  Jenkinsfile  README.adoc  build.xml  cmakeClean.sh  cmakeLinux.sh  design.adoc  greyvar.cppcheck  project.properties  windows.toolchain
doc/licenses/sound/: source.txt
res/atlas/: generate.py  water.json
res/img/textures/entities/: .directory
src/: Entity.cpp  Entity.hpp  EntityGrid.hpp  GameState.cpp  GameState.hpp  Grid.hpp  LocalPlayer.hpp  NetworkManager.cpp  NetworkManager.hpp  Player.hpp  RemotePlayer.cpp  RemotePlayer.hpp  Renderer.hpp  ResCache.cpp  ResCache.hpp  ServerBrowser.cpp  TextureCache.cpp  TextureCache.hpp  Tile.cpp  Tile.hpp  TileGrid.hpp  Ui.cpp  Ui.hpp  World.cpp  World.hpp  YamlNode.cpp  YamlNode.hpp  client.py  common.hpp  config.cpp  cvars.cpp  cvars.hpp  grid.py  input_handler.py  joysticks.cpp  keyEventHandler.cpp  main.cpp  renderer.cpp  renderer.py  renderer_helpers.cpp  (+7 more)
src.python/: clgame.py  frame.py  player.py  server_interface.py
src/core/: GameState.cpp  GameState.hpp  NetworkManager.cpp  NetworkManager.hpp  RemotePlayer.hpp  Renderer.hpp  ResCache.cpp  ScreenAbout.cpp  ScreenAbout.hpp  ScreenDashboard.hpp  ScreenMainMenu.hpp  ScreenPlayerSetup.cpp  ScreenPlayerSetup.hpp  ScreenServerBrowser.cpp  ScreenServerBrowser.hpp  ScreenSettings.cpp  ScreenSplash.cpp  Screens.cpp  ServerBrowser.hpp  Sound.hpp  Tile.hpp  YamlNode.cpp  config.cpp  cvars.cpp  freetype.cpp  main.cpp  renderer.cpp  renderer_helpers.cpp  renderer_hud.cpp  renderer_menu.cpp  sound.cpp  startup.hpp  util.cpp
src/core/gui/: Gui.cpp  Gui.hpp
src/core/gui/components/: Button.hpp  GuiComponent.cpp  GuiComponent.hpp  Label.hpp  Menu.hpp  MenuItem.hpp  TextureViewer.hpp
src/core/gui/layout/: GridLineProperties.hpp  LayoutConstraints.hpp  LayoutManager.cpp  LayoutManager.hpp  ResolvedPanelPosition.hpp
src/core/gui/screens/: Screen.cpp  Screen.hpp  ScreenAbout.cpp  ScreenAbout.hpp  ScreenConsole.hpp  ScreenDashboard.cpp  ScreenMainMenu.cpp  ScreenMainMenu.hpp  ScreenPlayerSetup.cpp  ScreenPlayerSetup.hpp  ScreenServerBrowser.cpp  ScreenServerBrowser.hpp  ScreenSettings.cpp  ScreenSettings.hpp  ScreenSplash.hpp  Screens.cpp  Screens.hpp
src/core/input/: PlayerInput.hpp
src/core/input/0_hid/: HidInputGesture.hpp  common.hpp
src/core/input/1_bindings/: bindings.cpp
src/core/input/2_actions/: ActionInput.hpp  ActionInputFirewall.hpp  actionExecuter.cpp
src/core/net/: NetClient.hpp
src/gui/: Gui.cpp  Gui.hpp
src/gui/components/: Button.hpp  GuiComponent.hpp  Label.hpp  Menu.hpp  MenuItem.hpp
src/gui/layout/: LayoutConstraints.hpp  LayoutManager.hpp
src/gui/screens/: ScreenMainMenu.cpp  ScreenMainMenu.hpp
src/gui/utils/: TextAlignment.hpp
src/input/: InputDevice.hpp  PlayerInput.cpp  PlayerInput.hpp  input.hpp
src/input/0_hid/: HidInput.hpp  HidInputDevice.hpp  common.hpp  gamepad.cpp  keyboard.cpp  mouse.cpp  touch.cpp
src/input/1_bindings/: bindings.cpp  common.hpp
src/input/2_actions/: ActionInput.hpp  actions.cpp
src/launchers/qtlauncher/: CMakeLists.txt  greyvar-qml-launcher.pro
src/launchers/qtlauncher/greyvar-qml-launcher_autogen/: moc_predefs.h
src/launchers/qtlauncher/greyvar-qml-launcher_autogen/UVLADIE3JM/: moc_BackEnd.cpp
src/launchers/qtlauncher/res/: window.qml  window.qmlc
src/launchers/qtlauncher/src/: BackEnd.hpp  CurlWrapper.hpp  Updater.hpp  main.cpp
src/net/: client_interface.grpc.pb.cc  client_interface.grpc.pb.h  client_interface.pb.cc  client_interface.pb.h  client_to_server_messages.grpc.pb.h  client_to_server_messages.pb.cc  client_to_server_messages.pb.h  server_interface.grpc.pb.cc  server_interface.grpc.pb.h  server_interface.pb.cc  server_interface.pb.h  server_to_client_messages.grpc.pb.h  server_to_client_messages.pb.cc  server_to_client_messages.pb.h
src/prototype/: client.py  frame.py  prof  renderer.py  server_interface.py  tile.py
src/vessel/: main.cpp
tst/: grid.cpp  helloWorld.cpp
var/: asan-ignore.txt  create-installer.py  findCvars.sh  greyvar.bat  gridVisualisation.xcf  makeResourceSheet.py  runClangTidy.sh  test.py  useClang.sh
